hphp/hack/test/typecheck/tconst/parent_test.php.exp
ERROR: File "parent_test.php", line 22, characters 13-23:
No static method `__construct` in `X` (Typing[4090])
  File "parent_test.php", line 3, characters 16-16:
  Declaration of `X` is here
ERROR: File "parent_test.php", line 26, characters 13-23:
No static method `__construct` in `X` (Typing[4090])
  File "parent_test.php", line 3, characters 16-16:
  Declaration of `X` is here
